<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
    android:background="@drawable/ic_artboard_1"
    tools:context=".Steps">


    <TextView
        android:id="@+id/textView4"
        android:layout_width="223dp"
        android:layout_height="40dp"
        android:layout_marginBottom="288dp"
        android:gravity="center"
        android:fontFamily="@font/qartella_regular"
        android:text="@string/camera_text"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="parent" />


    <TextView
        android:id="@+id/imagePlaceholder"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:background="@drawable/ic_camera_permission2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.225" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="350dp"
        android:layout_height="39dp"
        android:layout_marginTop="154dp"
        android:layout_marginBottom="344dp"
        android:fontFamily="@font/qartella_bold"
        android:text="@string/camera_access"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imagePlaceholder" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="293dp"
        android:layout_height="31dp"
        android:layout_marginBottom="108dp"
        android:fontFamily="@font/qartella_regular"
        android:gravity="center"
        android:text="@string/perm_text"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button2"
        android:layout_width="293dp"
        android:layout_height="42dp"
        android:layout_marginBottom="148dp"
        android:background="@drawable/buttonblue"
        android:fontFamily="@font/qartella_bold"
        android:text="@string/allow_camera"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="70dp"
        android:layout_height="18dp"
        android:layout_marginBottom="60dp"
        android:fontFamily="@font/qartella_regular"
        android:text="Not now"
        android:textColor="#567ECA"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>