<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

   <TextView
       android:id="@+id/textView5"
       android:layout_width="130dp"
       android:layout_height="170dp"
       android:layout_marginTop="72dp"
       android:background="@drawable/new_logo"
       app:layout_constraintHorizontal_bias="0.498"
       app:layout_constraintLeft_toLeftOf="parent"
       app:layout_constraintRight_toRightOf="parent"
       app:layout_constraintTop_toTopOf="parent" />

   <TextView
       android:id="@+id/textView2"
       android:layout_width="100dp"
       android:layout_height="56dp"
       android:layout_marginTop="97dp"
       android:layout_marginBottom="496dp"
       android:fontFamily="@font/qartella_bold"
       android:gravity="center"
       android:text="@string/login"
       android:textColor="@color/white"
       android:textSize="28sp"
       android:textStyle="bold"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintHorizontal_bias="0.498"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/textView5" />

   <TextView
       android:id="@+id/rectlog1"
       android:layout_width="340dp"
       android:layout_height="40dp"
       android:layout_marginTop="10dp"
       android:layout_marginBottom="436dp"
       android:background="@drawable/rectangle"
       android:fontFamily="@font/qartella_bold"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintHorizontal_bias="0.493"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/textView2" />

   <TextView
       android:id="@+id/rectlog2"
       android:layout_width="340dp"
       android:layout_height="40dp"
       android:layout_marginTop="10dp"
       android:layout_marginBottom="376dp"
       android:background="@drawable/rectangle"
       android:fontFamily="@font/qartella_bold"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintHorizontal_bias="0.493"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/rectlog1" />

   <EditText
       android:id="@+id/editTextTextEmailAddress"
       android:layout_width="wrap_content"
       android:layout_height="48dp"
       android:layout_marginEnd="1dp"
       android:layout_marginBottom="2dp"
       android:contentDescription="Email"
       android:ems="10"
       android:fontFamily="@font/qartella_regular"
       android:gravity=""
       android:inputType="textEmailAddress"
       android:text="Username/Email"
       android:textColor="#90000000"
       android:textSize="20sp"
       app:layout_constraintBottom_toBottomOf="@+id/rectlog1"
       app:layout_constraintEnd_toEndOf="@+id/rectlog1"
       app:layout_constraintHorizontal_bias="0.0"
       app:layout_constraintStart_toStartOf="@+id/rectlog1"
       app:layout_constraintTop_toTopOf="@+id/rectlog1"
       app:layout_constraintVertical_bias="0.8" />

   <EditText
       android:id="@+id/editTextTextPassword"
       android:layout_width="wrap_content"
       android:layout_height="48dp"
       android:layout_marginTop="12dp"
       android:layout_marginEnd="1dp"
       android:contentDescription="Password"
       android:ems="10"
       android:fontFamily="@font/qartella_regular"
       android:inputType="textPassword"
       android:text="Password"
       android:textColor="#90000000"
       android:textSize="20sp"
       android:gravity=""
       app:layout_constraintBottom_toBottomOf="@+id/rectlog2"
       app:layout_constraintEnd_toEndOf="@+id/rectlog2"
       app:layout_constraintHorizontal_bias="0.0"
       app:layout_constraintStart_toStartOf="@+id/rectlog2"
       app:layout_constraintTop_toTopOf="@+id/rectlog2"
       app:layout_constraintVertical_bias="1.0" />

   <androidx.appcompat.widget.AppCompatButton
       android:id="@+id/button2"
       android:layout_width="293dp"
       android:layout_height="42dp"
       android:layout_marginTop="129dp"
       android:background="@drawable/buttonblue"
       android:fontFamily="@font/qartella_bold"
       android:gravity="center"
       android:text="@string/login"
       android:textAllCaps="false"
       android:textColor="@color/white"
       android:textSize="20sp"
       app:layout_constraintLeft_toLeftOf="parent"
       app:layout_constraintRight_toRightOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />

   <TextView
       android:id="@+id/signup1"
       android:layout_width="260dp"
       android:layout_height="29dp"
       android:layout_marginTop="13dp"
       android:fontFamily="@font/qartella_regular"
       android:gravity="center"
       android:text="@string/loginpage_signup"
       android:textAllCaps="false"
       android:textColor="@color/white"
       android:textSize="15sp"
       app:layout_constraintHorizontal_bias="0.496"
       app:layout_constraintLeft_toLeftOf="parent"
       app:layout_constraintRight_toRightOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/button2" />

   <TextView
       android:id="@+id/textView6"
       android:layout_width="50dp"
       android:layout_height="18dp"
       android:layout_marginBottom="40dp"
       android:fontFamily="@font/qartella_regular"
       android:text="@string/goback"
       android:textColor="@color/white"
       android:textSize="12sp"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintHorizontal_bias="0.498"
       app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>