<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_background_wave4"
    tools:context=".MainActivity">


    <!--    bottom nav-->

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/backbutton"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/backbtn"
        app:layout_constraintHorizontal_bias="0.071"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/qartella_bold"
        android:text="More about us"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/whiterect"
        android:layout_width="390dp"
        android:layout_height="55dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/rectangleround"
        android:backgroundTint="@color/white"
        android:elevation="6dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView23" />

    <TextView
        android:id="@+id/whiterect3"
        android:layout_width="390dp"
        android:layout_height="300dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/rectangleround"
        android:backgroundTint="@color/white"
        android:elevation="6dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/whiterect2" />

    <TextView
        android:id="@+id/whiterect2"
        android:layout_width="390dp"
        android:layout_height="55dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/rectangleround"
        android:backgroundTint="@color/white"
        android:elevation="6dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/whiterect" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="75dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="75dp"
        android:fontFamily="@font/qartella_regular"
        android:text="@string/what"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:elevation="6dp"
        app:layout_constraintBottom_toBottomOf="@+id/whiterect2"
        app:layout_constraintEnd_toEndOf="@+id/whiterect2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="@+id/whiterect2"
        app:layout_constraintTop_toTopOf="@+id/whiterect2"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="134dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="133dp"
        android:fontFamily="@font/qartella_regular"
        android:text="@string/who"
        android:textColor="@color/black"
        android:elevation="6dp"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/whiterect"
        app:layout_constraintEnd_toEndOf="@+id/whiterect"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="@+id/whiterect"
        app:layout_constraintTop_toTopOf="@+id/whiterect"
        app:layout_constraintVertical_bias="0.0" />


    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="80dp"
        android:fontFamily="@font/qartella_regular"
        android:text="@string/how"
        android:elevation="6dp"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView16"
        app:layout_constraintEnd_toEndOf="@+id/whiterect3"
        app:layout_constraintStart_toStartOf="@+id/whiterect3"
        app:layout_constraintTop_toTopOf="@+id/whiterect3" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_marginBottom="37dp"
        android:elevation="6dp"
        android:fontFamily="@font/qartella_regular"
        android:text="@string/howdoesitwork"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/whiterect3"
        app:layout_constraintEnd_toEndOf="@+id/whiterect3"
        app:layout_constraintHorizontal_bias="0.564"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="@+id/whiterect3"
        app:layout_constraintTop_toTopOf="@+id/whiterect3"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/navbottom"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:background="@drawable/nav_bottom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/camera"
        android:layout_width="70dp"
        android:layout_height="51dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/camera_blue"
        android:backgroundTint="#384C71"
        android:elevation="2dp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/boomark"
        android:layout_width="17.5dp"
        android:layout_height="25dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/saved_blue_empty"
        android:backgroundTint="#384C71"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.265"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/info"
        android:layout_width="26dp"
        android:layout_height="26dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/info_blue"
        android:backgroundTint="#384C71"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.892"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/profile"
        android:layout_width="27dp"
        android:layout_height="25dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/profile_blue_empty"
        android:backgroundTint="#384C71"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.73"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/home"
        android:layout_width="20dp"
        android:layout_height="25dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/home_blue_empty"
        android:backgroundTint="#384C71"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.104"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>